third_party/move/move-compiler/tests/move_check/parser/function_acquires_bad_name.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_acquires_bad_name.move:3:22
  │
3 │     fun f() acquires {
  │                      ^
  │                      │
  │                      Unexpected '{'
  │                      Expected an access specifier

